# Space-Protector-game

./: .gitignore  CMakeLists.txt  tempCodeRunnerFile.cpp
assets/: CMakeLists.txt
executables/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt  game.cpp  game.hpp
libraries/: CMakeLists.txt
libraries/ECS/: CMakeLists.txt  ECS.cpp  ECS.hpp
libraries/components/: CMakeLists.txt  components.hpp
libraries/components/animatedTexture/: CMakeLists.txt  animatedTexture.cpp  animatedTexture.hpp
libraries/components/bulletsCollider/: CMakeLists.txt  bulletsCollider.cpp  bulletsCollider.hpp
libraries/components/button/: CMakeLists.txt  button.cpp  button.hpp
libraries/components/collider/: CMakeLists.txt  collider.cpp  collider.hpp
libraries/components/follower/: CMakeLists.txt  follower.cpp  follower.hpp
libraries/components/meteorHitbox/: CMakeLists.txt  meteorHitbox.cpp  meteorHitbox.hpp
libraries/components/mouse/: CMakeLists.txt  mouse.cpp  mouse.hpp
libraries/components/position/: CMakeLists.txt  position.cpp  position.hpp
libraries/components/shooter/: CMakeLists.txt  shooter.cpp  shooter.hpp
libraries/components/simpleTexture/: CMakeLists.txt  simpleTexture.cpp  simpleTexture.hpp
libraries/components/spawner/: CMakeLists.txt  spawner.cpp  spawner.hpp
libraries/components/text/: CMakeLists.txt  text.cpp  text.hpp
libraries/states/: CMakeLists.txt  states.hpp
libraries/states/gameover/: CMakeLists.txt  gameover.cpp  gameover.hpp
libraries/states/levels/: CMakeLists.txt  levels.cpp  levels.hpp
libraries/states/menu/: CMakeLists.txt  menu.cpp  menu.hpp
libraries/states/party/: CMakeLists.txt  party.cpp  party.hpp
libraries/structs/: CMakeLists.txt
libraries/structs/Vector2D/: CMakeLists.txt  Vector2D.cpp  Vector2D.hpp
libraries/structs/animation/: CMakeLists.txt  animation.cpp  animation.hpp
libraries/structs/bulletHitbox/: CMakeLists.txt  bulletHitbox.cpp  bulletHitbox.hpp
libraries/utilities/: CMakeLists.txt  utilities.hpp
libraries/utilities/bullet/: CMakeLists.txt  bullet.cpp  bullet.hpp
libraries/utilities/keyboardController/: CMakeLists.txt  keyboardController.cpp  keyboardController.hpp
libraries/utilities/mouse/: mouse.cpp  mouse.hpp
libraries/utilities/reusedTextures/: CMakeLists.txt  reusedTextures.cpp  reusedTextures.hpp
libraries/utilities/short_names/: CMakeLists.txt  short_names.cpp  short_names.hpp
libraries/utilities/texture_manager/: CMakeLists.txt  texture_manager.cpp  texture_manager.hpp
libraries/utilities/time/: CMakeLists.txt  time.cpp  time.hpp
src/inc/SDL2/: SDL.h
